<resources>
    <string name="app_name">property</string>
    <string name="no_data">暂无数据</string>
    <!--common-->
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="please_input">请输入</string>
    <string name="confirm">确定</string>
    <string name="delete_photo_hint">是否删除该图片？</string>
    <string name="please_waiting">请稍候...</string>
    <string name="unexpected_errors">服务不可用，请稍后再试</string>
    <string name="user_not_authorized">登录已失效，请重新登录</string>
    <string name="request_timeout_with_try">请求超时，请重试</string>
    <string name="service_not_available">服务不可用，请稍后再试</string>
    <string name="not_available_network_hint">当前网络不可用，请检查网络设置</string>
    <string name="yuan">元</string>
    <string name="money_unit">￥</string>
    <string name="more">更多</string>
    <string name="save">保存</string>
    <string name="ten_thousand">万</string>
    <string name="billion">亿</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <!--相册覆盖类库-->
    <string name="album_all_photos">所有图片</string>
    <string name="album_preview">预览</string>
    <string name="album_photos">图片</string>
    <string name="album_pictures">张图片</string>
    <string name="album_picture">张图片</string>
    <string name="album_loading">正在加载</string>
    <string name="album_cutting">请稍后</string>
    <string name="album_no_sd_card">没有SD卡</string>
    <string name="album_no_photo">没有图片</string>
    <string name="album_finish">完成</string>
    <string name="album_select">选择</string>
    <string name="album_up_to">最多</string>
    <string name="lib_confirm">确定</string>
    <!--登录-->
    <string name="login_in">登录</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="entry_community">进入社区</string>
    <string name="repire_role">维修工</string>
    <string name="manager_role">物业经理</string>
    <string name="role">身份选择：</string>


    <!--主页-->
    <string name="order">工单</string>
    <string name="notice">公告</string>
    <string name="topic">话题</string>
    <string name="person">我的</string>
    <!--工单-->
    <string name="please_assign">请指派</string>
    <string name="order_mananger">工单管理</string>
    <string name="unassigned">未指派</string>
    <string name="assigned">已指派</string>
    <string name="unaccept">待接受</string>
    <string name="accepted">已接受</string>
    <string name="assign">指派</string>
    <string name="order_detail">工单详情</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="start_repair">开始维修</string>
    <string name="finish_repair">维修完成</string>
    <string name="repair_owner_infor">报修业主信息</string>
    <string name="contact_now">联系他</string>
    <string name="order_progress_title">工单进度</string>
    <string name="repairman">维修人员</string>
    <string name="repairma">维修人员</string>
    <string-array name="order_status">
        <item>待指派</item>
        <item>待接受</item>
        <item>已接受</item>
        <item>维修中</item>
        <item>已维修</item>
        <item>已拒绝</item>
    </string-array>
    <string-array name="order_status_params">
        <item>unassign</item>
        <item>unaccept</item>
        <item>accepted</item>
        <item>repairing</item>
        <item>repaired</item>
        <item>refused</item>
    </string-array>
    <!--公告-->
    <string name="publish">发布</string>
    <string name="submit">提交</string>
    <string name="wu">物</string>
    <string name="ju">居</string>
    <string name="please_input_title">输入标题</string>
    <string name="please_input_notice_content">输入公告内容</string>
    <!--话题-->
    <!--<string name="topic">话题</string>-->
    <!--话题-->
    <string name="own">我的</string>
    <string name="community">社区</string>
    <string name="like">赞</string>
    <string name="topic_publish">话题发布</string>
    <string name="topic_publish_hint">请输入要发布的内容</string>
    <string name="del">删</string>
    <string name="send">发送</string>
    <string name="reply_colon">回复:</string>
    <string name="topic_detail">话题详情</string>
    <string name="publish_success">发布成功</string>
    <string name="upload_image_faild">上传图片失败</string>
    <string name="browse">浏览</string>
    <string name="time">次</string>
    <string name="delete_topic_hint">确定删除该话题？</string>
    <string name="delete_topic_success">已删除话题</string>
    <string name="copy">复制</string>
    <string name="has_copy_hint">已复制到剪贴板</string>
    <string name="total">共</string>
    <string name="replay_count">条回复>></string>
    <string name="comment_detail">评论详情</string>
    <string name="replay_comment">回复评论</string>
    <string name="strip">条</string>
    <string name="delete">删除</string>
    <string name="comment">评论</string>
    <!--设置-->
    <string name="setting">设置</string>
    <string name="message">消息</string>
    <string name="clear_cache">清空缓存</string>
    <string name="exit_account">退出账号</string>
    <string name="update_version">检查更新</string>
    <string name="person_infor">个人信息</string>
    <string name="portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="alter_nickname">修改昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="input_nickname_hint">好昵称可以让业主们更容易记住你</string>
</resources>
