<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <com.starlight.mobile.android.lib.view.CusHeadView
        android:id="@+id/login_layout_ch_head"
        style="@style/common_head_style"
        mAttr:chHead_rightText="@string/save"
        mAttr:chHead_title="@string/login_in"
        mAttr:chHead_title_padding_left="0dip" />
    <ImageView
        android:id="@+id/login_layout_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="15dip"
        android:layout_below="@+id/login_layout_ch_head"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        />
    <EditText
        android:id="@+id/login_layout_et_phone"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:hint="@string/please_input_phone"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_below="@+id/login_layout_iv_logo"
        android:background="@null"
        android:textColorHint="@color/common_hint_text_color"
        android:paddingBottom="@dimen/margin"
        android:paddingTop="@dimen/margin"
        android:layout_height="wrap_content"
        />
    <View style="@style/common_light_line_style"
        android:id="@+id/login_layout_v_phone"
        android:layout_alignLeft="@+id/login_layout_et_phone"
        android:layout_alignRight="@+id/login_layout_et_phone"
        android:layout_below="@+id/login_layout_et_phone"
        />

    <EditText
        android:id="@+id/login_layout_et_verify_code"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_toLeftOf="@+id/login_layout_tv_get_verify_code"
        android:hint="@string/please_input_verify_code"
        android:layout_below="@+id/login_layout_v_phone"
        android:background="@null"
        android:textColorHint="@color/common_hint_text_color"
        android:paddingTop="@dimen/margin"
        android:layout_alignLeft="@+id/login_layout_et_phone"
        android:paddingBottom="@dimen/margin"
        android:layout_height="wrap_content"
        />
    <View style="@style/common_light_line_style"
        android:id="@+id/login_layout_v_verify_code"
        android:layout_alignLeft="@+id/login_layout_et_phone"
        android:layout_alignRight="@+id/login_layout_et_phone"
        android:layout_below="@+id/login_layout_et_verify_code"
        />
    <TextView
        android:id="@+id/login_layout_tv_get_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_verify_code"
        android:layout_alignBottom="@+id/login_layout_et_verify_code"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginLeft="10dip"
        android:onClick="onClickListener"
        android:background="@drawable/common_item_click_selector"
        android:textColor="@color/common_light_text_color"
        android:textSize="12sp"
        android:layout_alignRight="@+id/login_layout_v_verify_code"
        android:layout_alignTop="@+id/login_layout_et_verify_code"
        />
    <Button
        android:id="@+id/login_layout_btn_login_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout_v_verify_code"
        android:layout_marginTop="30dip"
        android:text="@string/entry_community"
        android:onClick="onClickListener"
        android:textColor="@android:color/white"
        android:layout_alignLeft="@+id/login_layout_et_phone"
        android:layout_alignRight="@+id/login_layout_et_phone"
        android:background="@drawable/common_btn_selector"
        />
</RelativeLayout>