<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:background="@color/common_bg_color"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.starlight.mobile.android.lib.view.CusHeadView
        style="@style/common_head_style"
        mAttr:chHead_title="@string/setting"
        mAttr:chHead_leftImg="@drawable/ic_menu_backward"
        android:id="@+id/setting_layout_ch_head"
        mAttr:chHead_title_padding_left="0dip" />
    <FrameLayout
        android:layout_width="match_parent"
        android:onClick="onClickListener"
        android:background="@drawable/common_white_item_click_selector"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/setting_layout_tv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:paddingLeft="20dip"
            android:textColor="@color/common_light_text_color"
            />
        <TextView
            android:id="@+id/setting_layout_tv_cache_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="32M"
            android:textSize="12sp"
            android:textColor="@color/common_dark_gray_text_color"
            android:layout_marginRight="@dimen/margin"
            android:layout_gravity="right|center_vertical"
            />
    </FrameLayout>
    <View style="@style/common_light_line_style"
        android:layout_marginLeft="20dip"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:onClick="onClickListener"
        android:background="@drawable/common_white_item_click_selector"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/setting_layout_tv_update_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_version"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:paddingLeft="20dip"
            android:textColor="@color/common_light_text_color"
            />
        <TextView
            android:id="@+id/setting_layout_tv_update_version_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12sp"
            android:textColor="@color/common_dark_gray_text_color"
            android:layout_marginRight="@dimen/margin"
            android:layout_gravity="right|center_vertical"
            />
    </FrameLayout>
    <Button
        android:id="@+id/setting_layout_btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dip"
        android:text="@string/exit_account"
        android:onClick="onClickListener"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:textColor="@android:color/white"
        android:background="@drawable/common_btn_selector"
        />

</LinearLayout>