<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:background="@color/common_bg_color"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.starlight.mobile.android.lib.view.CusHeadView
        style="@style/common_green_head_style"
        android:id="@+id/person_infor_layout_ch_head"
        mAttr:chHead_title="@string/person_infor"
        mAttr:chHead_leftImg="@mipmap/ic_back_white"
        mAttr:chHead_title_padding_left="0dip" />
    <TextView
        android:id="@+id/person_infor_layout_tv_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portrait"
        android:onClick="onClickListener"
        android:clickable="true"
        android:paddingLeft="@dimen/margin"
        android:background="@drawable/common_white_item_click_selector"
        android:layout_alignBottom="@+id/person_infor_layout_iv_portrait"
        android:layout_alignTop="@+id/person_infor_layout_iv_portrait"
        android:paddingRight="@dimen/margin"
        android:textColor="@color/common_light_text_color"
        android:gravity="center_vertical"
        android:drawableRight="@mipmap/grey_arrow"
        />
    <ImageView
        android:id="@+id/person_infor_layout_iv_portrait"
        android:layout_width="72dip"
        android:layout_height="72dip"
        android:layout_marginRight="30dip"
        android:src="@mipmap/portrait"
        android:scaleType="centerCrop"
        android:paddingTop="15dip"
        android:paddingBottom="15dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/person_infor_layout_ch_head"
        />
    <View style="@style/common_light_line_style"
        android:id="@+id/person_infor_layout_v_line"
        android:layout_marginLeft="@dimen/margin"
        android:layout_below="@+id/person_infor_layout_tv_portrait"
        />
    <TextView
        android:id="@+id/person_infor_layout_tv_nickname_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:padding="@dimen/margin"
        android:onClick="onClickListener"
        android:clickable="true"
        android:layout_below="@+id/person_infor_layout_v_line"
        android:background="@drawable/common_white_item_click_selector"
        android:textColor="@color/common_light_text_color"
        android:gravity="center_vertical"
        android:drawableRight="@mipmap/grey_arrow"
        />
    <TextView
        android:id="@+id/person_infor_layout_tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_dark_gray_text_color"
        android:text="小李"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dip"
        android:layout_alignTop="@+id/person_infor_layout_tv_nickname_title"
        android:layout_alignBottom="@+id/person_infor_layout_tv_nickname_title"
        />
</RelativeLayout>